# face-recognition-tutorial

./: .gitignore  CMakeLists.txt  main.cpp  preprocessFace.cpp
src/: cv_utils.hpp  timer.hpp
